<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dasar"
    tools:context=".signup">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="85dp"
            android:layout_height="37dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_in"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="88dp" />

        <TextView
            android:id="@+id/create"
            android:layout_width="209dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/title_create"
            android:textAppearance="@style/accessaccount"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="125dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/email_adres"
            android:layout_width="127dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:gravity="top"
            android:text="@string/email_adres"
            android:textAppearance="@style/email_adres"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password"
            android:layout_width="127dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:ems="15"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/repassword"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:gravity="top"
            android:text="@string/repassword"
            android:textAppearance="@style/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/hint_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:ems="15"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hijau"
            android:text="REGISTER"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="459dp" />

        <TextView
            android:id="@+id/skip1"
            android:layout_width="25dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/skip"
            android:textAppearance="@style/skip"
            tools:layout_editor_absoluteX="193dp"
            tools:layout_editor_absoluteY="507dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/already"
            android:layout_width="179dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="top"
            android:text="@string/already"
            android:textAppearance="@style/don_t_have_"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="602dp" />

        <TextView
            android:id="@+id/toLogin"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textAppearance="@style/don_t_have_"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="602dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/cm">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/kg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/kg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/dasar"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/weight"
            android:layout_width="42dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="100dp"
            android:gravity="center_horizontal|top"
            android:text="@string/weight"
            android:textAppearance="@style/skip"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="184dp"
            tools:layout_editor_absoluteY="480dp" />


        <TextView
            android:id="@+id/height"
            android:layout_width="42dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal|top"
            android:text="@string/height"
            android:textAppearance="@style/skip"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="480dp" />

        <TextView
            android:id="@+id/goals"
            android:layout_width="42dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:gravity="center_horizontal|top"
            android:text="@string/goals"
            android:textAppearance="@style/skip"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="287dp"
            tools:layout_editor_absoluteY="480dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/female"
            tools:layout_editor_absoluteX="234dp"
            tools:layout_editor_absoluteY="501dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/male"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="501dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:layout_editor_absoluteX="0dp">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="557dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="67dp"
            android:layout_height="51dp"
            android:layout_marginLeft="10dp"
            android:text="Male"
            tools:layout_editor_absoluteX="242dp"
            tools:layout_editor_absoluteY="560dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>